--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "flowbite": "^1.8.1",
     "octokit": "^3.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
