--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx tailwindcss -i ./index.css -o ./output.css --watch"
   },
   "author": "",
   "license": "ISC"
