--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "octokit": "^3.1.0"
   },
   "devDependencies": {
+    "live-server": "^1.2.2",
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i ./index.css -o ./output.css --watch"
+    "tailwind": "npx tailwindcss -i ./index.css -o ./output.css --watch",
+    "dev": "npx live-server --port=5991"
   },
   "author": "",
   "license": "ISC"
